--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="loading" lang="en" data-textdirection="ltr" xmlns:th="http://www.thymeleaf.org">
+<html class="loading" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,12 @@
     <title>Nam Tang</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-        crossorigin="anonymous">
+    <link href="./plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/animate.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main_styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/responsive.css">
 
 </head>
 
@@ -20,134 +24,162 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="./plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+    <script src="./plugins/easing/easing.js"></script>
+    <script src="./js/custom.js"></script>
+
     <!-- Header -->
+    <div class="super_container">
 
-    <header class="header">
+        <header class="header">
+            <!-- Main Navigation -->
 
-        <!-- Top Bar -->
+            <nav class="main_nav">
+                <div class="container">
+                    <div class="row">
+                        <div class="col main_nav_col d-flex flex-row align-items-center">
 
-        <div class="top_bar">
+                            <div class="phone">+84 16 6767 9832</div>
+                            <div class="social">
+                                <ul class="social_list">
+                                    <li class="social_list_item">
+                                        <a href="https://github.com/NamTang" target="_blank">
+                                            <i class="fa fa-github" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li class="social_list_item">
+                                        <a href="https://www.facebook.com/zLuCasz" target="_blank">
+                                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                    <li class="social_list_item">
+                                        <a href="#">
+                                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+
+
+                            <div class="main_nav_container ml-auto">
+                                <ul class="main_nav_list">
+                                    <li class="main_nav_item">
+                                        <a href="#">home</a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="about.html">about me</a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="blog.html">skills</a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="blog.html">projects</a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="blog.html">resume</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="col hamburger">
+                                <i class="fa fa-bars trans_200 float-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="menu trans_500">
+            <div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
+                <div class="menu_close_container">
+                    <div class="menu_close"></div>
+                </div>
+                <div class="logo menu_logo">
+                    <a href="#">
+                        <img src="images/logo.png" alt="">
+                    </a>
+                </div>
+                <ul>
+                    <li class="menu_item">
+                        <a href="#">home</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="about.html">about me</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="blog.html">skills</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="blog.html">projects</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="blog.html">resume</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="content">
+
+  
+
+
+                <p>
+
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit harum reprehenderit, aspernatur, voluptatem amet culpa nesciunt
+                    consequuntur quod incidunt tempore quae nisi. Dolorem harum vero recusandae id dignissimos minima maxime?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officia corrupti laborum nobis necessitatibus
+                    at nemo magni. Consequatur quas dolorum fuga dolorem, aliquid ad ipsam odit pariatur. Quia, error numquam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vel eius praesentium consequatur animi
+                    consectetur blanditiis itaque laudantium asperiores rem suscipit recusandae aut, sit illo? Non nulla
+                    dignissimos modi accusamus?
+                </p>
+
+
+        </div>
+        <!-- Copyright -->
+
+        <div class="copyright">
             <div class="container">
                 <div class="row">
-                    <div class="col d-flex flex-row">
-                        <div class="phone">+84 16 6767 9832</div>
-                        <div class="social">
-                            <ul class="social_list">
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-pinterest" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-behance" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li class="social_list_item">
-                                    <a href="#">
-                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="user_box ml-auto">
-                            <div class="user_box_login user_box_link">
-                                <a href="#">login</a>
+                    <div class="col-lg-3 order-lg-1 order-2  ">
+                        <div class="copyright_content d-flex flex-row align-items-center">
+                            <div>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
+                                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                                <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </div>
-                            <div class="user_box_register user_box_link">
-                                <a href="#">register</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 order-lg-2 order-1">
+                        <div class="footer_nav_container d-flex flex-row align-items-center justify-content-lg-end">
+                            <div class="footer_nav">
+                                <ul class="footer_nav_list">
+                                    <li class="footer_nav_item">
+                                        <a href="#">home</a>
+                                    </li>
+                                    <li class="footer_nav_item">
+                                        <a href="about.html">about us</a>
+                                    </li>
+                                    <li class="footer_nav_item">
+                                        <a href="offers.html">offers</a>
+                                    </li>
+                                    <li class="footer_nav_item">
+                                        <a href="blog.html">news</a>
+                                    </li>
+                                    <li class="footer_nav_item">
+                                        <a href="contact.html">contact</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- Main Navigation -->
-
-        <nav class="main_nav">
-            <div class="container">
-                <div class="row">
-                    <div class="col main_nav_col d-flex flex-row align-items-center justify-content-start">
-                        <div class="logo_container">
-                            <div class="logo">
-                                <a href="#">
-                                    <img src="images/logo.png" alt="">travelix</a>
-                            </div>
-                        </div>
-                        <div class="main_nav_container ml-auto">
-                            <ul class="main_nav_list">
-                                <li class="main_nav_item">
-                                    <a href="#">home</a>
-                                </li>
-                                <li class="main_nav_item">
-                                    <a href="about.html">about us</a>
-                                </li>
-                                <li class="main_nav_item">
-                                    <a href="offers.html">offers</a>
-                                </li>
-                                <li class="main_nav_item">
-                                    <a href="blog.html">news</a>
-                                </li>
-                                <li class="main_nav_item">
-                                    <a href="contact.html">contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="content_search ml-lg-0 ml-auto">
-                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                width="17px" height="17px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-                                <g>
-                                    <g>
-                                        <g>
-                                            <path class="mag_glass" fill="#FFFFFF" d="M78.438,216.78c0,57.906,22.55,112.343,63.493,153.287c40.945,40.944,95.383,63.494,153.287,63.494
-    											s112.344-22.55,153.287-63.494C489.451,329.123,512,274.686,512,216.78c0-57.904-22.549-112.342-63.494-153.286
-    											C407.563,22.549,353.124,0,295.219,0c-57.904,0-112.342,22.549-153.287,63.494C100.988,104.438,78.439,158.876,78.438,216.78z
-    											M119.804,216.78c0-96.725,78.69-175.416,175.415-175.416s175.418,78.691,175.418,175.416
-    											c0,96.725-78.691,175.416-175.416,175.416C198.495,392.195,119.804,313.505,119.804,216.78z" />
-                                        </g>
-                                    </g>
-                                    <g>
-                                        <g>
-                                            <path class="mag_glass" fill="#FFFFFF" d="M6.057,505.942c4.038,4.039,9.332,6.058,14.625,6.058s10.587-2.019,14.625-6.058L171.268,369.98
-    											c8.076-8.076,8.076-21.172,0-29.248c-8.076-8.078-21.172-8.078-29.249,0L6.057,476.693
-    											C-2.019,484.77-2.019,497.865,6.057,505.942z" />
-                                        </g>
-                                    </g>
-                                </g>
-                            </svg>
-                        </div>
-
-                        <form id="search_form" class="search_form bez_1">
-                            <input type="search" class="search_content_input bez_1">
-                        </form>
-
-                        <div class="hamburger">
-                            <i class="fa fa-bars trans_200"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
-
-    </header>
-
-
+    </div>
 </body>
 
 </html>
