add: - about me template.      - event click focus article.      - some personal css style.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.carousel.css">
     <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
     <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/animate.css">
+
+    <!-- COLORLIB -->
     <link rel="stylesheet" type="text/css" href="./styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./styles/responsive.css">
-
+    <!-- END COLORLIB -->
 </head>
 
 <body>
@@ -26,7 +28,10 @@
         crossorigin="anonymous"></script>
     <script src="./plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
     <script src="./plugins/easing/easing.js"></script>
+
+    <!-- COLORLIB -->
     <script src="./js/custom.js"></script>
+    <!-- END COLORLIB -->
 
     <!-- Header -->
     <div class="super_container">
@@ -64,13 +69,13 @@
                             <div class="main_nav_container ml-auto">
                                 <ul class="main_nav_list">
                                     <li class="main_nav_item">
-                                        <a href="#">home</a>
-                                    </li>
-                                    <li class="main_nav_item">
-                                        <a href="about.html">about me</a>
+                                        <a href="about-me">about me</a>
                                     </li>
                                     <li class="main_nav_item">
                                         <a href="blog.html">skills</a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="blog.html">certificates</a>
                                     </li>
                                     <li class="main_nav_item">
                                         <a href="blog.html">projects</a>
@@ -94,20 +99,15 @@
                 <div class="menu_close_container">
                     <div class="menu_close"></div>
                 </div>
-                <div class="logo menu_logo">
-                    <a href="#">
-                        <img src="images/logo.png" alt="">
-                    </a>
-                </div>
                 <ul>
                     <li class="menu_item">
-                        <a href="#">home</a>
-                    </li>
-                    <li class="menu_item">
-                        <a href="about.html">about me</a>
+                        <a href="about-me">about me</a>
                     </li>
                     <li class="menu_item">
                         <a href="blog.html">skills</a>
+                    </li>
+                    <li class="main_nav_item">
+                        <a href="blog.html">certificates</a>
                     </li>
                     <li class="menu_item">
                         <a href="blog.html">projects</a>
@@ -118,24 +118,37 @@
                 </ul>
             </div>
         </div>
-        <div class="content">
 
-  
+        <!-- body content -->
+        <article id="about-me">
+            <div class="about-me">
+                <h3 class="about-me-title">ABOUT ME</h3>
+            </div>
+            <div class="container about-me-content">
+                <div class="row pt-md-5 pb-md-3">
+                    <div class="col">
+                        <h3>Tang Hoai Nam</h3>
+                        <h4>Java Developer</h4>
+                    </div>
+                </div>
 
+                <div class="border-bottom border-dark"></div>
 
-                <p>
-
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit harum reprehenderit, aspernatur, voluptatem amet culpa nesciunt
-                    consequuntur quod incidunt tempore quae nisi. Dolorem harum vero recusandae id dignissimos minima maxime?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officia corrupti laborum nobis necessitatibus
-                    at nemo magni. Consequatur quas dolorum fuga dolorem, aliquid ad ipsam odit pariatur. Quia, error numquam?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam vel eius praesentium consequatur animi
-                    consectetur blanditiis itaque laudantium asperiores rem suscipit recusandae aut, sit illo? Non nulla
-                    dignissimos modi accusamus?
-                </p>
-
-
-        </div>
+                <div class="row pt-md-3">
+                    <div class="col-md-4">
+                        <h3 class="text-dark font-weight-bold">Location</h3>
+                        <h3 class="text-dark font-weight-bold">Education</h3>
+                        <h3 class="text-dark font-weight-bold">Major</h3>
+                    </div>
+                    <div class="col-md-8 text-justify">
+                        <h3 class="text-dark font-weight-bold">About me</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In asperiores ducimus eligendi obcaecati. Corrupti minima id in velit temporibus molestiae. Molestiae iusto maiores exercitationem doloribus voluptatum quis! Doloribus, ut enim.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti neque illo, autem sequi nulla atque, quasi beatae possimus illum omnis at architecto labore dolorum quae! Excepturi laborum accusamus modi exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque id officiis temporibus aut eos assumenda omnis ab blanditiis, voluptas, praesentium cupiditate tempora fuga dolor dolorum animi vero voluptatum unde!</p>
+                    </div>
+                </div>
+            </div>
+        </article>
         <!-- Copyright -->
 
         <div class="copyright">
@@ -146,7 +159,8 @@
                             <div>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+                                is made with
                                 <i class="fa fa-heart-o" aria-hidden="true"></i> by
                                 <a href="https://colorlib.com" target="_blank">Colorlib</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -158,19 +172,19 @@
                             <div class="footer_nav">
                                 <ul class="footer_nav_list">
                                     <li class="footer_nav_item">
-                                        <a href="#">home</a>
+                                        <a href="about.html">about me</a>
                                     </li>
                                     <li class="footer_nav_item">
-                                        <a href="about.html">about us</a>
+                                        <a href="blog.html">skills</a>
                                     </li>
                                     <li class="footer_nav_item">
-                                        <a href="offers.html">offers</a>
+                                        <a href="blog.html">certificates</a>
                                     </li>
                                     <li class="footer_nav_item">
-                                        <a href="blog.html">news</a>
+                                        <a href="blog.html">projects</a>
                                     </li>
                                     <li class="footer_nav_item">
-                                        <a href="contact.html">contact</a>
+                                        <a href="blog.html">resume</a>
                                     </li>
                                 </ul>
                             </div>
