fixed some elements class. custom function show/hide menu

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <li class="menu_item">
                         <a href="blog.html">skills</a>
                     </li>
-                    <li class="main_nav_item">
+                    <li class="menu_item">
                         <a href="blog.html">certificates</a>
                     </li>
                     <li class="menu_item">
@@ -129,6 +129,11 @@
                     <div class="col">
                         <h3>Tang Hoai Nam</h3>
                         <h4>Java Developer</h4>
+                    </div>
+                    <div class="col">
+                        <ul>
+                            <li></li>
+                        </ul>
                     </div>
                 </div>
 
