add some css class and html element class

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="./plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <script src="./plugins/easing/easing.js"></script>
+    <!-- <script src="./plugins/easing/easing.js"></script> -->
 
     <!-- COLORLIB -->
     <script src="./js/custom.js"></script>
@@ -127,12 +127,16 @@
             <div class="container about-me-content">
                 <div class="row pt-md-5 pb-md-3">
                     <div class="col">
-                        <h3>Tang Hoai Nam</h3>
-                        <h4>Java Developer</h4>
+                        <h3 class="name">Tang Hoai Nam</h3>
+                        <h4 class="major">Java Developer</h4>
                     </div>
-                    <div class="col">
+                    <div class="col-md-8">
                         <ul>
-                            <li></li>
+                            <li>
+                                <i class="fa fa-map-marker pr-md-1"></i>
+                                <span>Bien Hoa, Dong Nai, Viet Nam</span>
+                            </li>
+                            <li class="fa fa-envelope pt-2"><a href="mailto:namkty96@gmail.com" class="p-md-1">namkty96@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -141,15 +145,20 @@
 
                 <div class="row pt-md-3">
                     <div class="col-md-4">
-                        <h3 class="text-dark font-weight-bold">Location</h3>
-                        <h3 class="text-dark font-weight-bold">Education</h3>
-                        <h3 class="text-dark font-weight-bold">Major</h3>
+                        <h4 class="text-dark font-weight-bold">Education</h4>
+                        <h4 class="text-dark font-weight-bold">Major</h4>
                     </div>
                     <div class="col-md-8 text-justify">
-                        <h3 class="text-dark font-weight-bold">About me</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In asperiores ducimus eligendi obcaecati. Corrupti minima id in velit temporibus molestiae. Molestiae iusto maiores exercitationem doloribus voluptatum quis! Doloribus, ut enim.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti neque illo, autem sequi nulla atque, quasi beatae possimus illum omnis at architecto labore dolorum quae! Excepturi laborum accusamus modi exercitationem.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque id officiis temporibus aut eos assumenda omnis ab blanditiis, voluptas, praesentium cupiditate tempora fuga dolor dolorum animi vero voluptatum unde!</p>
+                        <h4 class="text-dark font-weight-bold">About me</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In asperiores ducimus eligendi obcaecati.
+                            Corrupti minima id in velit temporibus molestiae. Molestiae iusto maiores exercitationem doloribus
+                            voluptatum quis! Doloribus, ut enim.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti neque illo, autem sequi nulla
+                            atque, quasi beatae possimus illum omnis at architecto labore dolorum quae! Excepturi laborum
+                            accusamus modi exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque id officiis temporibus
+                            aut eos assumenda omnis ab blanditiis, voluptas, praesentium cupiditate tempora fuga dolor dolorum
+                            animi vero voluptatum unde!</p>
                     </div>
                 </div>
             </div>
