--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <!-- side menu-->
         <div class="hamburger-side-menu d-none">
-            <i class="fa fa-bars trans_200 float-left"></i>
+            <i class="fa fa-bars trans_200"></i>
         </div>
         <div class="menu trans_500">
             <div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
