add: certificates article and images, change: delete unused function and custom prev and next button click event

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                                         <a href="#skills">skills</a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="blog.html">certificates</a>
+                                        <a href="#cert">certificates</a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="blog.html">projects</a>
+                                        <a href="#projects">projects</a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="blog.html">resume</a>
+                                        <a href="#cv">resume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -101,13 +101,13 @@
                         <a href="#skills">skills</a>
                     </li>
                     <li class="menu_item">
-                        <a href="cert">certificates</a>
+                        <a href="#cert">certificates</a>
                     </li>
                     <li class="menu_item">
-                        <a href="project">projects</a>
+                        <a href="#projects">projects</a>
                     </li>
                     <li class="menu_item">
-                        <a href="cv">resume</a>
+                        <a href="#cv">resume</a>
                     </li>
                 </ul>
             </div>
@@ -129,7 +129,7 @@
                         <ul>
                             <li>
                                 <i class="fa fa-map-marker pr-md-1"></i>
-                                <span>Bien Hoa, Dong Nai, Viet Nam</span>
+                                <p class="d-inline">Bien Hoa, Dong Nai, Viet Nam</p>
                             </li>
                             <li class="fa fa-envelope pt-2">
                                 <a href="mailto:namkty96@gmail.com" class="p-md-1">namkty96@gmail.com</a>
@@ -143,19 +143,20 @@
                 <div class="row pt-md-3">
                     <div class="col-md-4">
                         <h4 class="name">Education</h4>
+                        <p>Ho Chi Minh City University of Technology</p>
                         <h4 class="name">Major</h4>
+                        <p>Software Engineering</p>
+                        <h4 class="name">Expecting Graduation</h4>
+                        <p>May, 2019</p>
                     </div>
                     <div class="col-md-8 text-justify">
                         <h4 class="name">About me</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In asperiores ducimus eligendi obcaecati.
-                            Corrupti minima id in velit temporibus molestiae. Molestiae iusto maiores exercitationem doloribus
-                            voluptatum quis! Doloribus, ut enim.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti neque illo, autem sequi nulla
-                            atque, quasi beatae possimus illum omnis at architecto labore dolorum quae! Excepturi laborum
-                            accusamus modi exercitationem.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, doloremque id officiis temporibus
-                            aut eos assumenda omnis ab blanditiis, voluptas, praesentium cupiditate tempora fuga dolor dolorum
-                            animi vero voluptatum unde!</p>
+                        <p>I'm Tang Hoai Nam, a full stack developer with <b>2 months of experience in Java technologies
+                                at FPT Software.</b>
+                            Currently, I am working as a freelancer.I have good knowledge of <b>Database Design, Design Pattern,
+                                Object-Oriented Analysis and Design.</b></p>
+                        <p>I like helping other and work well with group. I can also do some mentoring tasks and code reviewing
+                            for other members.</p>
                     </div>
                 </div>
             </div>
@@ -167,66 +168,122 @@
                 <h3 class="title">SKILLS</h3>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-5 content">
+                <div class="row container d-flex justify-content-center">
+                    <div class="col-md-3 content mr-md-5">
                         a
                     </div>
-                    <div class="col-md-2"></div>
-                    <div class="col-md-5 content">c</div>
+                    <div class="col-md-3 content mr-md-5"></div>
+                    <div class="col-md-3 content">c</div>
                 </div>
             </div>
         </article>
 
-        <!-- skills-->
+        <!-- certificates -->
         <article id="cert">
             <div class="middle-title">
                 <h3 class="title">CERTIFICATES</h3>
             </div>
         </article>
+        <div class="container">
+            <!-- Home Slider -->
 
-        <!-- end body content-->
-        <!-- Copyright -->
-        <footer class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 order-lg-1 order-2  ">
-                        <div class="copyright_content d-flex flex-row align-items-center">
-                            <div>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
-                                <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                                <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </div>
+            <div class="home_slider_container">
+
+                <!-- Slider Item -->
+                <div class="owl-item home_slider_item">
+                    <img class="center-fit" src="./images/cert-java.jpg" alt="">
+                </div>
+
+                <!-- Home Slider Nav - Prev -->
+                <div class="home_slider_nav home_slider_prev">
+                    <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="28px" height="33px" viewBox="0 0 28 33" enable-background="new 0 0 28 33" xml:space="preserve">
+                        <defs>
+                            <linearGradient id='home_grad_prev'>
+                                <stop offset='0%' stop-color='#fa9e1b' />
+                                <stop offset='100%' stop-color='#8d4fff' />
+                            </linearGradient>
+                        </defs>
+                        <path class="nav_path" fill="rgba(54, 19, 84, 0.6)" d="M19,0H9C4.029,0,0,4.029,0,9v15c0,4.971,4.029,9,9,9h10c4.97,0,9-4.029,9-9V9C28,4.029,23.97,0,19,0z
+    					M26,23.091C26,27.459,22.545,31,18.285,31H9.714C5.454,31,2,27.459,2,23.091V9.909C2,5.541,5.454,2,9.714,2h8.571
+    					C22.545,2,26,5.541,26,9.909V23.091z" />
+                        <polygon class="nav_arrow" fill="rgba(54, 19, 84, 0.6)" points="15.044,22.222 16.377,20.888 12.374,16.885 16.377,12.882 15.044,11.55 9.708,16.885 11.04,18.219 
+    					11.042,18.219 " />
+                    </svg>
+                </div>
+
+                <!-- Home Slider Nav - Next -->
+                <div class="home_slider_nav home_slider_next">
+                    <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        width="28px" height="33px" viewBox="0 0 28 33" enable-background="new 0 0 28 33" xml:space="preserve">
+                        <defs>
+                            <linearGradient id='home_grad_next'>
+                                <stop offset='0%' stop-color='#fa9e1b' />
+                                <stop offset='100%' stop-color='#8d4fff' />
+                            </linearGradient>
+                        </defs>
+                        <path class="nav_path" fill="rgba(54, 19, 84, 0.6)" d="M19,0H9C4.029,0,0,4.029,0,9v15c0,4.971,4.029,9,9,9h10c4.97,0,9-4.029,9-9V9C28,4.029,23.97,0,19,0z
+    				M26,23.091C26,27.459,22.545,31,18.285,31H9.714C5.454,31,2,27.459,2,23.091V9.909C2,5.541,5.454,2,9.714,2h8.571
+    				C22.545,2,26,5.541,26,9.909V23.091z" />
+                        <polygon class="nav_arrow" fill="rgba(54, 19, 84, 0.6)" points="13.044,11.551 11.71,12.885 15.714,16.888 11.71,20.891 13.044,22.224 18.379,16.888 17.048,15.554 
+    				17.046,15.554 " />
+                    </svg>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- projects-->
+    <article id="projects">
+        <div class="middle-title">
+            <h3 class="title">PROJECTS</h3>
+        </div>
+    </article>
+
+    <!-- end body content-->
+    <!-- Copyright -->
+    <footer class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 order-lg-1 order-2  ">
+                    <div class="copyright_content d-flex flex-row align-items-center">
+                        <div>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+                            is made with
+                            <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                     </div>
-                    <div class="col-lg-9 order-lg-2 order-1">
-                        <div class="footer_nav_container d-flex flex-row align-items-center justify-content-lg-end">
-                            <div class="footer_nav">
-                                <ul class="footer_nav_list">
-                                    <li class="footer_nav_item">
-                                        <a href="#about-me">about me</a>
-                                    </li>
-                                    <li class="footer_nav_item">
-                                        <a href="#skills">skills</a>
-                                    </li>
-                                    <li class="footer_nav_item">
-                                        <a href="cert">certificates</a>
-                                    </li>
-                                    <li class="footer_nav_item">
-                                        <a href="project">projects</a>
-                                    </li>
-                                    <li class="footer_nav_item">
-                                        <a href="cv">resume</a>
-                                    </li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-lg-9 order-lg-2 order-1">
+                    <div class="footer_nav_container d-flex flex-row align-items-center justify-content-lg-end">
+                        <div class="footer_nav">
+                            <ul class="footer_nav_list">
+                                <li class="footer_nav_item">
+                                    <a href="#about-me">about me</a>
+                                </li>
+                                <li class="footer_nav_item">
+                                    <a href="#skills">skills</a>
+                                </li>
+                                <li class="footer_nav_item">
+                                    <a href="#cert">certificates</a>
+                                </li>
+                                <li class="footer_nav_item">
+                                    <a href="#projects">projects</a>
+                                </li>
+                                <li class="footer_nav_item">
+                                    <a href="#cv">resume</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
@@ -235,7 +292,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="./plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <!-- <script src="./plugins/easing/easing.js"></script> -->
+    <script src="./plugins/easing/easing.js"></script>
 
     <!-- COLORLIB -->
     <script src="./js/custom.js"></script>
